[gd_scene load_steps=4 format=2]

[ext_resource path="res://random_images/images.jpg" type="Texture2D" id=1]
[ext_resource path="res://cards/card.gd" type="Script" id=2]
[ext_resource path="res://cards/Cards_Interface.gd" type="Script" id=3]

[node name="Cards" type="Control"]
offset_left = 5.88629
offset_top = 36.1585
offset_right = 45.8863
offset_bottom = 76.1585
scale = Vector2( 7.56, 3.52 )
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Card1" type="TextureRect" parent="."]
anchor_left = 0.005
anchor_top = 0.157
anchor_right = 0.083
anchor_bottom = 0.163
offset_left = 0.00997901
offset_top = -7.63291
offset_right = 36.89
offset_bottom = 32.1271
scale = Vector2( 0.233, 0.942 )
texture = ExtResource( 1 )
expand = true
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Card2" type="TextureRect" parent="."]
offset_left = 17.4635
offset_top = -2.024
offset_right = 57.4635
offset_bottom = 37.976
scale = Vector2( 0.233, 0.942 )
texture = ExtResource( 1 )
expand = true
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Card3" type="TextureRect" parent="."]
offset_left = 33.6334
offset_top = -2.01788
offset_right = 73.6334
offset_bottom = 37.9821
scale = Vector2( 0.233, 0.942 )
texture = ExtResource( 1 )
expand = true
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="mouse_entered" from="Card1" to="Card1" method="_on_mouse_entered"]
[connection signal="mouse_exited" from="Card1" to="Card1" method="_on_mouse_exited"]
[connection signal="mouse_entered" from="Card2" to="Card2" method="_on_mouse_entered"]
[connection signal="mouse_exited" from="Card2" to="Card2" method="_on_mouse_exited"]
[connection signal="mouse_entered" from="Card3" to="Card3" method="_on_mouse_entered"]
[connection signal="mouse_exited" from="Card3" to="Card3" method="_on_mouse_exited"]
